# sdk-wrapping-module

./: .mcp.json  CMakeLists.txt  README.md
.claude/: settings.json  settings.local.json
.moai/: manifest.json
.moai/config/sections/: git-strategy.yaml  project.yaml
.moai/plans/: mighty-roaming-curry.md
.moai/project/: product.md  structure.md  tech.md
.moai/specs/SPEC-ADAPTER-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-ADAPTER-002/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-CORE-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-INTEG-001/: acceptance.md  plan.md  spec.md
adapters/abyz/: CMakeLists.txt
adapters/abyz/include/: ABYZDetector.h
adapters/abyz/src/: ABYZAdapter.cpp  ABYZDetector.cpp
adapters/dummy/: CMakeLists.txt
adapters/dummy/include/: DummyDetector.h
adapters/dummy/src/: DummyAdapter.cpp  DummyDetector.cpp
adapters/emul/: CMakeLists.txt
adapters/emul/include/: EmulDetector.h  ScenarioEngine.h
adapters/emul/src/: EmulAdapter.cpp  EmulDetector.cpp  ScenarioEngine.cpp
adapters/varex/: CMakeLists.txt
adapters/varex/include/: VarexDetector.h
adapters/varex/src/: VarexAdapter.cpp  VarexDetector.cpp
adapters/vieworks/: CMakeLists.txt
adapters/vieworks/include/: VieworksDetector.h
adapters/vieworks/src/: VieworksAdapter.cpp  VieworksDetector.cpp
cmake/: FindVendorSDK.cmake
docs/: plan.md
examples/cli/: CMakeLists.txt  uxdi_cli.cpp
examples/gui_demo/: CMakeLists.txt  GUIDemoApp.cpp  GUIDemoApp.h  main.cpp
include/uxdi/: DetectorFactory.h  DetectorManager.h  IDetector.h  IDetectorListener.h  IDetectorSynchronous.h  Types.h  uxdi_export.h
mock_sdk/abyz/include/: abyz_sdk.h
mock_sdk/abyz/src/: ABYZMockSDK.cpp
mock_sdk/varex/include/: varex_sdk.h
mock_sdk/varex/src/: VarexMockSDK.cpp
mock_sdk/vieworks/include/: vieworks_sdk.h
mock_sdk/vieworks/src/: VieworksMockSDK.cpp
scripts/: restore-codex-integration.sh  verify-codex-integration.sh
src/uxdi/: CMakeLists.txt  DetectorFactory.cpp  DetectorManager.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_adapter_load.cpp
tests/test_core/: test_detector_factory.cpp  test_detector_manager.cpp  test_detector_types.cpp
